# serializer version: 1
# name: TestFeatureFlagMatcher.test_coercion_of_booleans_with_is_not_operator
  '''
  SELECT 1 AS "a"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = '307'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  LIMIT 1
  '''
# ---
# name: TestFeatureFlagMatcher.test_coercion_of_booleans_with_is_not_operator.1
  '''
  SELECT NOT ((("clairview_person"."properties" -> 'disabled') = 'false'::jsonb
               OR ("clairview_person"."properties" -> 'disabled') = '"false"'::jsonb)
              AND "clairview_person"."properties" ? 'disabled'
              AND NOT (("clairview_person"."properties" -> 'disabled') = 'null'::jsonb)) AS "flag_X_condition_0",
             NOT ((("clairview_person"."properties" -> 'disabled') = 'false'::jsonb
                   OR ("clairview_person"."properties" -> 'disabled') = '"false"'::jsonb)
                  AND "clairview_person"."properties" ? 'disabled'
                  AND NOT (("clairview_person"."properties" -> 'disabled') = 'null'::jsonb)) AS "flag_X_condition_1",
                 NOT ((("clairview_person"."properties" -> 'disabled') = 'false'::jsonb
                       OR ("clairview_person"."properties" -> 'disabled') = '"false"'::jsonb)
                      AND "clairview_person"."properties" ? 'disabled'
                      AND NOT (("clairview_person"."properties" -> 'disabled') = 'null'::jsonb)) AS "flag_X_condition_2",
                     NOT ((("clairview_person"."properties" -> 'disabled') = 'false'::jsonb
                           OR ("clairview_person"."properties" -> 'disabled') = '"false"'::jsonb)
                          AND "clairview_person"."properties" ? 'disabled'
                          AND NOT (("clairview_person"."properties" -> 'disabled') = 'null'::jsonb)) AS "flag_X_condition_3",
                         NOT ((("clairview_person"."properties" -> 'disabled') = 'false'::jsonb
                               OR ("clairview_person"."properties" -> 'disabled') = '"false"'::jsonb)
                              AND "clairview_person"."properties" ? 'disabled'
                              AND NOT (("clairview_person"."properties" -> 'disabled') = 'null'::jsonb)) AS "flag_X_condition_4",
                             NOT ((("clairview_person"."properties" -> 'string_disabled') = 'false'::jsonb
                                   OR ("clairview_person"."properties" -> 'string_disabled') = '"false"'::jsonb)
                                  AND "clairview_person"."properties" ? 'string_disabled'
                                  AND NOT (("clairview_person"."properties" -> 'string_disabled') = 'null'::jsonb)) AS "flag_X_condition_5",
                                 NOT ((("clairview_person"."properties" -> 'string_disabled') = 'false'::jsonb
                                       OR ("clairview_person"."properties" -> 'string_disabled') = '"false"'::jsonb)
                                      AND "clairview_person"."properties" ? 'string_disabled'
                                      AND NOT (("clairview_person"."properties" -> 'string_disabled') = 'null'::jsonb)) AS "flag_X_condition_6",
                                     NOT ((("clairview_person"."properties" -> 'string_disabled') = 'false'::jsonb
                                           OR ("clairview_person"."properties" -> 'string_disabled') = '"false"'::jsonb)
                                          AND "clairview_person"."properties" ? 'string_disabled'
                                          AND NOT (("clairview_person"."properties" -> 'string_disabled') = 'null'::jsonb)) AS "flag_X_condition_7",
                                         NOT ((("clairview_person"."properties" -> 'string_disabled') = 'false'::jsonb
                                               OR ("clairview_person"."properties" -> 'string_disabled') = '"false"'::jsonb)
                                              AND "clairview_person"."properties" ? 'string_disabled'
                                              AND NOT (("clairview_person"."properties" -> 'string_disabled') = 'null'::jsonb)) AS "flag_X_condition_8"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = '307'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_coercion_of_strings_and_numbers_with_is_not_operator
  '''
  SELECT 1 AS "a"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = '307'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  LIMIT 1
  '''
# ---
# name: TestFeatureFlagMatcher.test_coercion_of_strings_and_numbers_with_is_not_operator.1
  '''
  SELECT (NOT ((("clairview_person"."properties" -> 'Organizer Id') IN ('"307"'::jsonb)
                OR ("clairview_person"."properties" -> 'Organizer Id') IN ('307'::jsonb))
               AND "clairview_person"."properties" ? 'Organizer Id'
               AND NOT (("clairview_person"."properties" -> 'Organizer Id') = 'null'::jsonb))
          AND NOT (("clairview_person"."properties" -> 'Organizer Id') IN ('307'::jsonb)
                   AND "clairview_person"."properties" ? 'Organizer Id'
                   AND NOT (("clairview_person"."properties" -> 'Organizer Id') = 'null'::jsonb))
          AND NOT ((("clairview_person"."properties" -> 'Organizer Id') = '"307"'::jsonb
                    OR ("clairview_person"."properties" -> 'Organizer Id') = '307'::jsonb)
                   AND "clairview_person"."properties" ? 'Organizer Id'
                   AND NOT (("clairview_person"."properties" -> 'Organizer Id') = 'null'::jsonb))
          AND NOT (("clairview_person"."properties" -> 'Organizer Id') = '307'::jsonb
                   AND "clairview_person"."properties" ? 'Organizer Id'
                   AND NOT (("clairview_person"."properties" -> 'Organizer Id') = 'null'::jsonb))) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = '307'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_coercion_of_strings_and_numbers_with_is_not_operator.2
  '''
  SELECT 1 AS "a"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = '307'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  LIMIT 1
  '''
# ---
# name: TestFeatureFlagMatcher.test_coercion_of_strings_and_numbers_with_is_not_operator.3
  '''
  SELECT NOT ((("clairview_person"."properties" -> 'Distinct Id') IN ('"307"'::jsonb)
               OR ("clairview_person"."properties" -> 'Distinct Id') IN ('307'::jsonb))
              AND "clairview_person"."properties" ? 'Distinct Id'
              AND NOT (("clairview_person"."properties" -> 'Distinct Id') = 'null'::jsonb)) AS "flag_X_condition_0",
             NOT (("clairview_person"."properties" -> 'Distinct Id') IN ('307'::jsonb)
                  AND "clairview_person"."properties" ? 'Distinct Id'
                  AND NOT (("clairview_person"."properties" -> 'Distinct Id') = 'null'::jsonb)) AS "flag_X_condition_1",
                 NOT ((("clairview_person"."properties" -> 'Distinct Id') = '"307"'::jsonb
                       OR ("clairview_person"."properties" -> 'Distinct Id') = '307'::jsonb)
                      AND "clairview_person"."properties" ? 'Distinct Id'
                      AND NOT (("clairview_person"."properties" -> 'Distinct Id') = 'null'::jsonb)) AS "flag_X_condition_2",
                     NOT (("clairview_person"."properties" -> 'Distinct Id') = '307'::jsonb
                          AND "clairview_person"."properties" ? 'Distinct Id'
                          AND NOT (("clairview_person"."properties" -> 'Distinct Id') = 'null'::jsonb)) AS "flag_X_condition_3"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = '307'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_db_matches_independent_of_string_or_number_type
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlagMatcher.test_db_matches_independent_of_string_or_number_type.1
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_db_matches_independent_of_string_or_number_type.2
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_db_matches_independent_of_string_or_number_type.3
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_db_matches_independent_of_string_or_number_type.4
  '''
  SELECT ((("clairview_person"."properties" -> 'Distinct Id') IN ('"307"'::jsonb)
           OR ("clairview_person"."properties" -> 'Distinct Id') IN ('307'::jsonb))
          AND "clairview_person"."properties" ? 'Distinct Id'
          AND NOT (("clairview_person"."properties" -> 'Distinct Id') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = '307'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_db_matches_independent_of_string_or_number_type.5
  '''
  SELECT (("clairview_person"."properties" -> 'Distinct Id') IN ('307'::jsonb)
          AND "clairview_person"."properties" ? 'Distinct Id'
          AND NOT (("clairview_person"."properties" -> 'Distinct Id') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = '307'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_db_matches_independent_of_string_or_number_type.6
  '''
  SELECT (("clairview_person"."properties" -> 'Distinct Id') = '307'::jsonb
          AND "clairview_person"."properties" ? 'Distinct Id'
          AND NOT (("clairview_person"."properties" -> 'Distinct Id') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = '307'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_invalid_regex_match_flag
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlagMatcher.test_invalid_regex_match_flag.1
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_invalid_regex_match_flag.2
  '''
  SELECT (("clairview_person"."properties" ->> 'email')::text ~ '["neil@x.com"]'
          AND "clairview_person"."properties" ? 'email'
          AND NOT (("clairview_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = '307'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_invalid_regex_match_flag.3
  '''
  SELECT (("clairview_person"."properties" ->> 'email')::text ~ '["neil@x.com"]'
          AND "clairview_person"."properties" ? 'email'
          AND NOT (("clairview_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = 'another_id'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_multiple_flags
  '''
  SELECT "clairview_grouptypemapping"."id",
         "clairview_grouptypemapping"."team_id",
         "clairview_grouptypemapping"."group_type",
         "clairview_grouptypemapping"."group_type_index",
         "clairview_grouptypemapping"."name_singular",
         "clairview_grouptypemapping"."name_plural"
  FROM "clairview_grouptypemapping"
  WHERE "clairview_grouptypemapping"."team_id" = 2
  '''
# ---
# name: TestFeatureFlagMatcher.test_multiple_flags.1
  '''
  SELECT (("clairview_person"."properties" -> 'email') = '"test@clairview.com"'::jsonb
          AND "clairview_person"."properties" ? 'email'
          AND NOT (("clairview_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_1",
         (true) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = 'test_id'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_multiple_flags.2
  '''
  SELECT (true) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "clairview_group"
  WHERE ("clairview_group"."team_id" = 2
         AND "clairview_group"."group_key" = 'group_key'
         AND "clairview_group"."group_type_index" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_multiple_flags.3
  '''
  SELECT (("clairview_group"."group_properties" -> 'name') IN ('"foo.inc"'::jsonb)
          AND "clairview_group"."group_properties" ? 'name'
          AND NOT (("clairview_group"."group_properties" -> 'name') = 'null'::jsonb)) AS "flag_X_condition_0",
         (("clairview_group"."group_properties" -> 'name') IN ('"foo2.inc"'::jsonb)
          AND "clairview_group"."group_properties" ? 'name'
          AND NOT (("clairview_group"."group_properties" -> 'name') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "clairview_group"
  WHERE ("clairview_group"."team_id" = 2
         AND "clairview_group"."group_key" = 'foo'
         AND "clairview_group"."group_type_index" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_multiple_flags.4
  '''
  SELECT "clairview_grouptypemapping"."id",
         "clairview_grouptypemapping"."team_id",
         "clairview_grouptypemapping"."group_type",
         "clairview_grouptypemapping"."group_type_index",
         "clairview_grouptypemapping"."name_singular",
         "clairview_grouptypemapping"."name_plural"
  FROM "clairview_grouptypemapping"
  WHERE "clairview_grouptypemapping"."team_id" = 2
  '''
# ---
# name: TestFeatureFlagMatcher.test_multiple_flags.5
  '''
  SELECT (("clairview_person"."properties" -> 'email') = '"test@clairview.com"'::jsonb
          AND "clairview_person"."properties" ? 'email'
          AND NOT (("clairview_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_1",
         (true) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = 'test_id'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_multiple_flags.6
  '''
  SELECT (("clairview_group"."group_properties" -> 'name') IN ('"foo.inc"'::jsonb)
          AND "clairview_group"."group_properties" ? 'name'
          AND NOT (("clairview_group"."group_properties" -> 'name') = 'null'::jsonb)) AS "flag_X_condition_0",
         (("clairview_group"."group_properties" -> 'name') IN ('"foo2.inc"'::jsonb)
          AND "clairview_group"."group_properties" ? 'name'
          AND NOT (("clairview_group"."group_properties" -> 'name') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "clairview_group"
  WHERE ("clairview_group"."team_id" = 2
         AND "clairview_group"."group_key" = 'foo2'
         AND "clairview_group"."group_type_index" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_numeric_operator_with_cohorts_and_nested_cohorts
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE (NOT "clairview_cohort"."deleted"
         AND "clairview_cohort"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_numeric_operator_with_cohorts_and_nested_cohorts.1
  '''
  SELECT (((("clairview_person"."properties" -> 'number') > '"100"'::jsonb
            AND JSONB_TYPEOF(("clairview_person"."properties" -> 'number')) = ('string'))
           OR (("clairview_person"."properties" -> 'number') > '100.0'::jsonb
               AND JSONB_TYPEOF(("clairview_person"."properties" -> 'number')) = ('number')))
          AND "clairview_person"."properties" ? 'number'
          AND NOT (("clairview_person"."properties" -> 'number') = 'null'::jsonb)) AS "flag_X_condition_0",
         (((("clairview_person"."properties" -> 'version') > '"1.05"'::jsonb
            AND JSONB_TYPEOF(("clairview_person"."properties" -> 'version')) = ('string'))
           OR (("clairview_person"."properties" -> 'version') > '1.05'::jsonb
               AND JSONB_TYPEOF(("clairview_person"."properties" -> 'version')) = ('number')))
          AND "clairview_person"."properties" ? 'version'
          AND NOT (("clairview_person"."properties" -> 'version') = 'null'::jsonb)) AS "flag_X_condition_0",
         (((("clairview_person"."properties" -> 'number') < '"31"'::jsonb
            AND JSONB_TYPEOF(("clairview_person"."properties" -> 'number')) = ('string'))
           OR (("clairview_person"."properties" -> 'number') < '31.0'::jsonb
               AND JSONB_TYPEOF(("clairview_person"."properties" -> 'number')) = ('number')))
          AND "clairview_person"."properties" ? 'number'
          AND NOT (("clairview_person"."properties" -> 'number') = 'null'::jsonb)
          AND ((("clairview_person"."properties" -> 'nested_prop') > '"20"'::jsonb
                AND JSONB_TYPEOF(("clairview_person"."properties" -> 'nested_prop')) = ('string'))
               OR (("clairview_person"."properties" -> 'nested_prop') > '20.0'::jsonb
                   AND JSONB_TYPEOF(("clairview_person"."properties" -> 'nested_prop')) = ('number')))
          AND "clairview_person"."properties" ? 'nested_prop'
          AND NOT (("clairview_person"."properties" -> 'nested_prop') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = '307'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_numeric_operator_with_groups_and_person_flags
  '''
  SELECT "clairview_grouptypemapping"."id",
         "clairview_grouptypemapping"."team_id",
         "clairview_grouptypemapping"."group_type",
         "clairview_grouptypemapping"."group_type_index",
         "clairview_grouptypemapping"."name_singular",
         "clairview_grouptypemapping"."name_plural"
  FROM "clairview_grouptypemapping"
  WHERE "clairview_grouptypemapping"."team_id" = 2
  '''
# ---
# name: TestFeatureFlagMatcher.test_numeric_operator_with_groups_and_person_flags.1
  '''
  SELECT (((("clairview_person"."properties" -> 'number') >= '"20"'::jsonb
            AND JSONB_TYPEOF(("clairview_person"."properties" -> 'number')) = ('string'))
           OR (("clairview_person"."properties" -> 'number') >= '20.0'::jsonb
               AND JSONB_TYPEOF(("clairview_person"."properties" -> 'number')) = ('number')))
          AND "clairview_person"."properties" ? 'number'
          AND NOT (("clairview_person"."properties" -> 'number') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = '307'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_numeric_operator_with_groups_and_person_flags.2
  '''
  SELECT (((("clairview_group"."group_properties" -> 'number') > '"100"'::jsonb
            AND JSONB_TYPEOF(("clairview_group"."group_properties" -> 'number')) = ('string'))
           OR (("clairview_group"."group_properties" -> 'number') > '100.0'::jsonb
               AND JSONB_TYPEOF(("clairview_group"."group_properties" -> 'number')) = ('number')))
          AND "clairview_group"."group_properties" ? 'number'
          AND NOT (("clairview_group"."group_properties" -> 'number') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "clairview_group"
  WHERE ("clairview_group"."team_id" = 2
         AND "clairview_group"."group_key" = 'foo'
         AND "clairview_group"."group_type_index" = 0)
  '''
# ---
# name: TestFeatureFlagMatcher.test_numeric_operator_with_groups_and_person_flags.3
  '''
  SELECT (("clairview_group"."group_properties" -> 'number') > '"100b2c"'::jsonb
          AND "clairview_group"."group_properties" ? 'number'
          AND NOT (("clairview_group"."group_properties" -> 'number') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "clairview_group"
  WHERE ("clairview_group"."team_id" = 2
         AND "clairview_group"."group_key" = 'foo-project'
         AND "clairview_group"."group_type_index" = 1)
  '''
# ---
# name: TestFeatureFlagMatcher.test_super_condition_matches_string
  '''
  SELECT ((("clairview_person"."properties" -> 'is_enabled') = 'true'::jsonb
           OR ("clairview_person"."properties" -> 'is_enabled') = '"true"'::jsonb)
          AND "clairview_person"."properties" ? 'is_enabled'
          AND NOT (("clairview_person"."properties" -> 'is_enabled') = 'null'::jsonb)) AS "flag_X_super_condition", ("clairview_person"."properties" -> 'is_enabled') IS NOT NULL AS "flag_X_super_condition_is_set",
                                                                                                                                                                                 (("clairview_person"."properties" -> 'email') = '"fake@clairview.com"'::jsonb
                                                                                                                                                                                  AND "clairview_person"."properties" ? 'email'
                                                                                                                                                                                  AND NOT (("clairview_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0",
                                                                                                                                                                                 (("clairview_person"."properties" -> 'email') = '"test@clairview.com"'::jsonb
                                                                                                                                                                                  AND "clairview_person"."properties" ? 'email'
                                                                                                                                                                                  AND NOT (("clairview_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_1",
                                                                                                                                                                                 (true) AS "flag_X_condition_2"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = 'test_id'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_with_sql_injection_properties_and_other_aliases
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlagMatcher.test_with_sql_injection_properties_and_other_aliases.1
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_with_sql_injection_properties_and_other_aliases.2
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE (NOT "clairview_cohort"."deleted"
         AND "clairview_cohort"."team_id" = 2)
  '''
# ---
# name: TestFeatureFlagMatcher.test_with_sql_injection_properties_and_other_aliases.3
  '''
  SELECT (((("clairview_person"."properties" -> 'number space') > '"100"'::jsonb
            AND JSONB_TYPEOF(("clairview_person"."properties" -> 'number space')) = ('string'))
           OR (("clairview_person"."properties" -> 'number space') > '100.0'::jsonb
               AND JSONB_TYPEOF(("clairview_person"."properties" -> 'number space')) = ('number')))
          AND "clairview_person"."properties" ? 'number space'
          AND NOT (("clairview_person"."properties" -> 'number space') = 'null'::jsonb)
          AND ((JSONB_TYPEOF(("clairview_person"."properties" -> ';''" SELECT 1; DROP TABLE clairview_featureflag;')) = ('string')
                AND ("clairview_person"."properties" -> ';''" SELECT 1; DROP TABLE clairview_featureflag;') > '"100"'::jsonb)
               OR (JSONB_TYPEOF(("clairview_person"."properties" -> ';''" SELECT 1; DROP TABLE clairview_featureflag;')) = ('number')
                   AND ("clairview_person"."properties" -> ';''" SELECT 1; DROP TABLE clairview_featureflag;') > '100.0'::jsonb))
          AND "clairview_person"."properties" ? ';''" SELECT 1; DROP TABLE clairview_featureflag;'
          AND NOT (("clairview_person"."properties" -> ';''" SELECT 1; DROP TABLE clairview_featureflag;') = 'null'::jsonb)) AS "flag_X_condition_0",
         (((JSONB_TYPEOF(("clairview_person"."properties" -> ';''" SELECT 1; DROP TABLE clairview_featureflag;')) = ('string')
            AND ("clairview_person"."properties" -> ';''" SELECT 1; DROP TABLE clairview_featureflag;') > '"100"'::jsonb)
           OR (JSONB_TYPEOF(("clairview_person"."properties" -> ';''" SELECT 1; DROP TABLE clairview_featureflag;')) = ('number')
               AND ("clairview_person"."properties" -> ';''" SELECT 1; DROP TABLE clairview_featureflag;') > '100.0'::jsonb))
          AND "clairview_person"."properties" ? ';''" SELECT 1; DROP TABLE clairview_featureflag;'
          AND NOT (("clairview_person"."properties" -> ';''" SELECT 1; DROP TABLE clairview_featureflag;') = 'null'::jsonb)) AS "flag_X_condition_1",
         (((("clairview_person"."properties" -> 'version!!!') > '"1.05"'::jsonb
            AND JSONB_TYPEOF(("clairview_person"."properties" -> 'version!!!')) = ('string'))
           OR (("clairview_person"."properties" -> 'version!!!') > '1.05'::jsonb
               AND JSONB_TYPEOF(("clairview_person"."properties" -> 'version!!!')) = ('number')))
          AND "clairview_person"."properties" ? 'version!!!'
          AND NOT (("clairview_person"."properties" -> 'version!!!') = 'null'::jsonb)) AS "flag_X_condition_2",
         ((("clairview_person"."properties" -> 'nested_prop --random #comment //test') = '"21"'::jsonb
           OR ("clairview_person"."properties" -> 'nested_prop --random #comment //test') = '21'::jsonb)
          AND "clairview_person"."properties" ? 'nested_prop --random #comment //test'
          AND NOT (("clairview_person"."properties" -> 'nested_prop --random #comment //test') = 'null'::jsonb)) AS "flag_X_condition_3"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = '307'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging
  'BEGIN'
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.1
  '''
  
  SET LOCAL statement_timeout = 2
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.10
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM clairview_persondistinctid
     WHERE team_id = 2
       AND distinct_id = ANY('{other_id,example_id}') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM clairview_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) ),
       flags_to_override AS
    (SELECT key
     FROM clairview_featureflag
     WHERE team_id = 2
       AND ensure_experience_continuity = TRUE
       AND active = TRUE
       AND deleted = FALSE
       AND key NOT IN
         (SELECT feature_flag_key
          FROM existing_overrides) )
  INSERT INTO clairview_featureflaghashkeyoverride (team_id, person_id, feature_flag_key, hash_key)
  SELECT team_id,
         person_id,
         key,
         'example_id'
  FROM flags_to_override,
       target_person_ids
  WHERE EXISTS
      (SELECT 1
       FROM clairview_person
       WHERE id = person_id
         AND team_id = 2) ON CONFLICT DO NOTHING
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.11
  'ROLLBACK'
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.12
  'BEGIN'
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.13
  '''
  
  SET LOCAL statement_timeout = 2
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.14
  '''
  SELECT "clairview_persondistinctid"."person_id",
         "clairview_persondistinctid"."distinct_id"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."distinct_id" IN ('other_id',
                                                      'example_id')
         AND "clairview_persondistinctid"."team_id" = 2)
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.15
  '''
  SELECT "clairview_featureflaghashkeyoverride"."feature_flag_key",
         "clairview_featureflaghashkeyoverride"."hash_key",
         "clairview_featureflaghashkeyoverride"."person_id"
  FROM "clairview_featureflaghashkeyoverride"
  WHERE ("clairview_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "clairview_featureflaghashkeyoverride"."team_id" = 2)
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.16
  'COMMIT'
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.2
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM clairview_persondistinctid
     WHERE team_id = 2
       AND distinct_id = ANY('{other_id,example_id}') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM clairview_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) )
  SELECT key
  FROM clairview_featureflag
  WHERE team_id = 2
    AND ensure_experience_continuity = TRUE
    AND active = TRUE
    AND deleted = FALSE
    AND key NOT IN
      (SELECT feature_flag_key
       FROM existing_overrides)
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.3
  'COMMIT'
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.4
  'BEGIN'
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.5
  '''
  
  SET LOCAL statement_timeout = 2
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.6
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM clairview_persondistinctid
     WHERE team_id = 2
       AND distinct_id = ANY('{other_id,example_id}') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM clairview_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) ),
       flags_to_override AS
    (SELECT key
     FROM clairview_featureflag
     WHERE team_id = 2
       AND ensure_experience_continuity = TRUE
       AND active = TRUE
       AND deleted = FALSE
       AND key NOT IN
         (SELECT feature_flag_key
          FROM existing_overrides) )
  INSERT INTO clairview_featureflaghashkeyoverride (team_id, person_id, feature_flag_key, hash_key)
  SELECT team_id,
         person_id,
         key,
         'example_id'
  FROM flags_to_override,
       target_person_ids
  WHERE EXISTS
      (SELECT 1
       FROM clairview_person
       WHERE id = person_id
         AND team_id = 2) ON CONFLICT DO NOTHING
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.7
  'ROLLBACK'
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.8
  'BEGIN'
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.9
  '''
  
  SET LOCAL statement_timeout = 2
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging
  'BEGIN'
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.1
  '''
  
  SET LOCAL statement_timeout = 2
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.10
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM clairview_persondistinctid
     WHERE team_id = 2
       AND distinct_id = ANY('{other_id,example_id}') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM clairview_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) ),
       flags_to_override AS
    (SELECT key
     FROM clairview_featureflag
     WHERE team_id = 2
       AND ensure_experience_continuity = TRUE
       AND active = TRUE
       AND deleted = FALSE
       AND key NOT IN
         (SELECT feature_flag_key
          FROM existing_overrides) )
  INSERT INTO clairview_featureflaghashkeyoverride (team_id, person_id, feature_flag_key, hash_key)
  SELECT team_id,
         person_id,
         key,
         'example_id'
  FROM flags_to_override,
       target_person_ids
  WHERE EXISTS
      (SELECT 1
       FROM clairview_person
       WHERE id = person_id
         AND team_id = 2) ON CONFLICT DO NOTHING
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.11
  'COMMIT'
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.12
  'BEGIN'
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.13
  '''
  
  SET LOCAL statement_timeout = 2
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.14
  '''
  SELECT "clairview_persondistinctid"."person_id",
         "clairview_persondistinctid"."distinct_id"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."distinct_id" IN ('other_id',
                                                      'example_id')
         AND "clairview_persondistinctid"."team_id" = 2)
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.15
  '''
  SELECT "clairview_featureflaghashkeyoverride"."feature_flag_key",
         "clairview_featureflaghashkeyoverride"."hash_key",
         "clairview_featureflaghashkeyoverride"."person_id"
  FROM "clairview_featureflaghashkeyoverride"
  WHERE ("clairview_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "clairview_featureflaghashkeyoverride"."team_id" = 2)
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.16
  'COMMIT'
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.2
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM clairview_persondistinctid
     WHERE team_id = 2
       AND distinct_id = ANY('{other_id,example_id}') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM clairview_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) )
  SELECT key
  FROM clairview_featureflag
  WHERE team_id = 2
    AND ensure_experience_continuity = TRUE
    AND active = TRUE
    AND deleted = FALSE
    AND key NOT IN
      (SELECT feature_flag_key
       FROM existing_overrides)
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.3
  'COMMIT'
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.4
  'BEGIN'
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.5
  '''
  
  SET LOCAL statement_timeout = 2
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.6
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM clairview_persondistinctid
     WHERE team_id = 2
       AND distinct_id = ANY('{other_id,example_id}') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM clairview_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) ),
       flags_to_override AS
    (SELECT key
     FROM clairview_featureflag
     WHERE team_id = 2
       AND ensure_experience_continuity = TRUE
       AND active = TRUE
       AND deleted = FALSE
       AND key NOT IN
         (SELECT feature_flag_key
          FROM existing_overrides) )
  INSERT INTO clairview_featureflaghashkeyoverride (team_id, person_id, feature_flag_key, hash_key)
  SELECT team_id,
         person_id,
         key,
         'example_id'
  FROM flags_to_override,
       target_person_ids
  WHERE EXISTS
      (SELECT 1
       FROM clairview_person
       WHERE id = person_id
         AND team_id = 2) ON CONFLICT DO NOTHING
  '''
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.7
  'ROLLBACK'
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.8
  'BEGIN'
# ---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.9
  '''
  
  SET LOCAL statement_timeout = 2
  '''
# ---
